--- a/casestudytwo.html
+++ b/casestudytwo.html
@@ -247,6 +247,7 @@
     </div>
     <!--End of Wireframes-->
 
+
     <!-- Case Study Cards -->
     <div class="container-fluid content">
         <hr class="my-4"><br>
@@ -257,12 +258,11 @@
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card h-100">
-                    <img src="Images\Food Culture.png" class="card-img-top"
-                        alt="Collage of screenshots of the Food Culture App">
+                    <img src="Images\CFIA Hi-Fi.png" class="card-img-top"
+                        alt="High-fidelity homepage wireframe of the Canadian Food Inspection Agency redesign">
                     <div class="card-body">
-                        <h4 class="card-title">Food Culture App</h4>
-                        <p class="card-text">Designing a "one-stop" shop for food enthusiasts craving cultural
-                            cuisine.
+                        <h4 class="card-title">Canadian Food Inspection Agency</h4>
+                        <p class="card-text">Redesigning the navigation system and homepage of a government agency.
                         </p><br>
                         <a href="" class="link">View Case Study &#8594;</a>
                     </div>
