--- a/casestudytwo.html
+++ b/casestudytwo.html
@@ -264,7 +264,7 @@
                         <h4 class="card-title">Canadian Food Inspection Agency</h4>
                         <p class="card-text">Redesigning the navigation system and homepage of a government agency.
                         </p><br>
-                        <a href="" class="link">View Case Study &#8594;</a>
+                        <a href="casestudyone.html" class="link">View Case Study &#8594;</a>
                     </div>
                 </div>
             </div>
